<resources>
    <string name="app_name">App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lets_create_account">Lets! Create Account</string>
    <string name="sign_up">Sign-up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_again">Enter Password again</string>
    <string name="login">Login</string>
    <string name="you_already_have_an_account_please">You already have an Account please</string>
    <string name="sign_in">Sign-in</string>
    <string name="hello_there_welcome_back">Hello there, Welcome back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_don_t_have_an_account_please">You don\'t have an Account please</string>
    <string name="note_title">Note Title</string>
    <string name="enter_a_note_here">Enter a note here</string>
    <string name="title">Keeps in Note</string>
    <string name="titles">Title</string>
    <string name="notes">Notes</string>
    <string name="date_time">Date Time</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget Password?</string>
</resources>